# wahida

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-supabase.html  turbo.json  wahida.db
.github/workflows/: ci.yml
apps/api/: Dockerfile  Dockerfile.prod  README.md  leapcell.yaml  pyproject.toml  railway.json  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  auth.py  celery_app.py  config.py  main.py  tasks.py
apps/api/app/core/: __init__.py  auth.py  celery_app.py  config.py  db.py  security.py
apps/api/app/db/: __init__.py  base.py
apps/api/app/models/: __init__.py  core.py
apps/api/app/routers/: __init__.py  chat.py  progress.py  quiz.py  run.py  runner.py
apps/api/app/services/: __init__.py  hint_policy.py  rag.py
apps/api/app/services/rag/: __init__.py  chunking.py  container.py  embeddings.py  index.py  pipeline.py  reranker.py  runner.py  sample_data.py  types.py
apps/frontend/: .prettierignore  Dockerfile  Dockerfile.prod  content  eslint.config.mjs  next.config.ts  package-lock.json  (+5 more)
docs/: COMPLETE_SPRINT_HISTORY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ROADMAP.md  SPRINT_SUMMARY.md
infra/: README.md
scripts/: deploy.sh  ingest_markdown.py  leapcell_build.sh  seed_comprehensive.py  seed_quiz.py  seed_quiz_standalone.py  test-supabase-node.js  test_supabase.py
tests/: test_retriever.py
(+38 files in other folders)
